# sds

./: .gitignore  pyproject.toml
cohort1/week2/: lab5.ipynb
week1/: README_app.md  app.py  ks_lab9.ipynb  lab1.ipynb  lab2.ipynb  lab3.ipynb  lab4.ipynb  lab5.ipynb  lab6.ipynb  lab7.ipynb  lab9.ipynb  requirements.txt  timer.ipynb
week2/: answer ks.py  answer.py  app.py  embeddings ks.py  embeddings.py  eval ks.py  eval.py  evaluator ks 2.py  evaluator.py  ingest ks.py  ingest.py  ingest_josh.py  lab1 KS.ipynb  lab1.ipynb  lab2 KS.ipynb  lab2.ipynb  lab2_josh 2.ipynb  test.py
week3/: MyTwin_withQQ.py  lab1.ipynb  lab2.ipynb  lab3.ipynb  lab4.ipynb
week4/: MyTwin.py  lab1 ks.ipynb  lab1.ipynb  lab2 ks.ipynb  lab3 ks.ipynb  lab3.ipynb
week4/sandbox/: news.md  output.md
week4/twin/: InterviewAnalysis.py  MyTwin_withQQ.py  VirtualRealtor.py  db_tools.py  db_tools_mcp_server.py  ingest_twin.py  lab4.ipynb  lab5 ks.ipynb  questions_mcp_server.py  sds_part2.code-workspace
week4/twin/info/: BlackFemaleProject Perspectives_ Keiani Allen.md  Common-Unity_ A Conversation with Kim Scott [Podcast S3E5].md  Finding the Common Thread with Sandra Varner [Podcast S2E8].md
week4/twin/info/output/: 20251225_223104_interview_coding (chatgpt5.2).md  20251225_223104_themes_and_insights(chatgpt5.2).md
week4/twin/info/transcript/: Walk in Your Purpose  with Jasmine Jai-Ndiaye [Podcast S2E7].md
